# wgslx

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md
crates/wgslx-bindgen/: Cargo.toml
crates/wgslx-bindgen/src/: lib.rs
crates/wgslx-cli/: Cargo.toml  out.wgsl
crates/wgslx-cli/src/: lib.rs
crates/wgslx-cli/test/: out.wgsl  shader.wgsl
crates/wgslx-compiler/: Cargo.toml
crates/wgslx-compiler/src/: lib.rs
crates/wgslx-internal/: Cargo.toml
crates/wgslx-internal/src/: file_provider.rs  lib.rs  module_source_provider.rs
crates/wgslx-lsp/: Cargo.toml
crates/wgslx-lsp/src/: file_sources.rs  main.rs  module.rs
crates/wgslx-lsp/src/module/: completion_canditate.rs  definition.rs  diagnostic.rs  format.rs  search_position.rs
crates/wgslx-lsp/test/: other.wgsl  simple.wgsl  third.wgsl
editors/vscode/: .eslintrc.json  .gitignore  .vscode-test.mjs  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: index.ts
editors/vscode/syntaxes/: wgslx.tmLanguage.json
examples/hello_shader/: entry.wgslx  types.wgslx  wgslx.toml
examples/hello_shader/src/: constants.wgslx  lib.wgslx  types.wgslx
src/: change_state.rs  completion.rs  file_sources.rs  lib.rs  main.rs  module.rs
src/module/: completion_canditate.rs  definition.rs  diagnostic.rs  error.rs  format.rs  naga_type.rs  search_position.rs
tests/: Cargo.toml
tests/tests/: root.rs  wgslx.rs
tests/tests/import-twice/: dep.wgslx  wgslx.toml
tests/tests/import-twice-nested/: wgslx.toml
tests/tests/import-twice-nested/src/: lib.wgslx  twice.wgslx
tests/tests/import-twice-relative/nested/: dep.wgslx
tests/tests/import-twice/src/: lib.wgslx
xtask/: README.md
xtask/src/: main.rs
