[package]
name = "wgslx-cli"
version = "0.14.0"
authors = ["wgslx developers, gfx-rs developers"]
edition = "2021"
description = "Wgslx shader translation command line tool"
keywords = ["shader", "wgsl", "wgslx", "WebGPU", "WebGPU Shading Language"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "wgslx"
path = "src/bin/wgslx.rs"
test = false

[dependencies]
bincode = "1"
log = "0.4"
codespan-reporting = "0.11"
env_logger = "0.10"
argh = "0.1.5"
compiler = { package = "wgslx-compiler", path = "../wgslx-compiler"}
