[package]
name = "wgslx-lsp"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naga = { package = "naga", path = "../wgslx-wgpu/naga", features = ["wgsl-in", "wgsl-out", "clone", "glsl-in", "glsl-out", "spv-in", "spv-out", "serialize", "deserialize"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-lsp = "0.20.0"
